2005-05-08  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-guess-url): Fixed bug caused by recent
	changes in url guessing that required something to be in the
	clipboard before posting. 

2005-05-06  John Sullivan  <johns@fsf.org>

	* delicious.el (delicious-get-posts-from-stored): Added new
	argument TAG-MATCH-TYPE. Instead of filtering posts by a regexp
	for tags, the user can now specify whether they want posts with
	all of the tags, or with any of the tags. Broke filtering logic
	into separate functions.
	(delicious-test-tag-all): New function to test whether a post has
	all of the given tags.
	(delicious-test-tag-any): New function to test whether a post has
	any of the given tags.

	* planner-delicious.el (planner-delicious-insert-posts): Updated
	to use new format of `delicious-get-posts-from-stored'.

	* delicious.el (delicious-test-date-regexp): New function to find 
	posts with dates matching a regexp.

2005-05-06  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-complete-tags): Fixed mistake in number
	of arguments for prompt format string.

2005-05-04  johnsu01  <john@wjsullivan.net>

	* delicioapi.el: Updated FSF address in copyright header.
	(delicious-api-post): Fixed long lines.
	(delicious-api-get-tags): Fixed long lines.

	* delicious.el: Updated FSF address in copyright header.

	* README: Explained new rename command. Updated the address of the
	FSF in the copyright header.

	* delicioapi.el (delicious-api-rename): Added correct URL string-escaping.

	* delicious.el (delicious-complete-tags): Added QUANTITY argument,
	so that we can use this to only read a specific number of
	tags. Also added arguments to customize the prompt, and a REQUIRE
	argument to require a completion match. These are all helpful for
	reading tags for `delicious-rename-tag'.
	(delicious-rename-tag): New interactive command to rename all
	instances of one tag to one or more tags.

2005-05-01  johnsu01  <john@wjsullivan.net>
