@@ -4,7 +4,7 @@
 
 ;; Author: John Sullivan <john@wjsullivan.net>
 ;; Created 25 October 2004
-;; Version: 0.2 2005-05-04
+;; Version: 0.2 2005-05-10
 ;; Keywords: comm, hypermedia
 
 ;; This program is free software; you can redistribute it and/or
@@ -70,7 +70,7 @@
 (defvar delicious-api-html "/html/"
   "*The path to the del.icio.us HTML feed.  It should begin and end with a slash.")
 
-(defconst delicious-api-version "delicioapi.el/0.2 2005-05-04"
+(defconst delicious-api-version "delicioapi.el/0.2 2005-05-10"
 "The version string for this copy of delicioapi.el.")
 
 (defconst delicious-api-field-match "=\"\\(.*?\\)\""
@@ -322,9 +322,15 @@ TAG is a tag to filter by.  The dates are the keys."
   (delicious-send-request (delicious-build-request uri))))
 
 (defun delicious-api-delete (url)
-"Delete a URL."
-(let ((uri (format "posts/delete?url=%s" url)))
-  (delicious-send-request (delicious-build-request uri))))
+  "Delete a URL."
+  (let ((uri (format "posts/delete?url=%s" url)))
+    (delicious-send-request (delicious-build-request uri))))
+
+(defun delicious-api-get-timestamp ()
+  "Return the time of the last update from the server."
+  (let ((uri (format "posts/update")))
+    (delicious-send-request (delicious-build-request uri))
+    (delicious-api-parse-timestamp)))
 
 (defun delicious-api-html
 (&optional username tagname count extended divclass aclass tags tagclass tagsep tagsepclass bullet rssbutton extendeddiv extendedclass)
@@ -546,7 +552,17 @@ Output goes to `delicious-api-buffer'."
                                       (concat field "=\"\\(.*?\\)\"") post)
                                   collect (cons field (match-string 1 post))))))
         posts-parsed))))
-        
+
+(defun delicious-api-parse-timestamp ()
+  "Parse the `delicious-api-buffer' XML to get the timestamp."
+  (save-excursion
+    (with-current-buffer delicious-api-buffer
+      (goto-char (point-min))
+      (let ((timestamp (progn
+			 (re-search-forward "<update time=\"\\(.*\\)\" />")
+			 (match-string 1))))
+	timestamp))))
+
 (defun delicious-auth ()
   "Return the authorization string using `delicious-api-user' and `delicious-api-password'."
   (base64-encode-string
